<resources>
  <string name="app_name">internship-playground</string>
  <string name="show_store">Show store</string>
  <string name="item_text">ID: %s\nType: %s\nManufacturer: %s\nModel: %s\nColor: %s\nYear: %s</string>
  <string name="error">Error</string>
  <string name="Done">Done</string>
  <string name="add">Add</string>
  <string name="dialog_title">Add vehicle</string>
  <string name="empty_field_message">Some field is empty</string>
  <string name="done">Done</string>
  <string name="type">Type</string>
  <string name="manufacturer">Manufacturer</string>
  <string name="vehicle_model">Model</string>
  <string name="vehicle_color">Color</string>
  <string name="vehicle_year">Year</string>
  <string name="url">Image url</string>
  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <string name="server_error">Server doesnt response</string>
  <string name="offline">No internet. You can\'t post data</string>
  <string name="offline_1">No internet</string>

</resources>
