<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/large_padding"
    >

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/dialog_edit_text_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type"
        android:inputType="text"
        />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/dialog_edit_text_manufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/manufacturer"
        android:inputType="text"
        />
  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/dialog_edit_text_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_model"
        android:inputType="text"
        />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/dialog_edit_text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_color"
        android:inputType="text"
        />
  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/dialog_edit_text_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_year"
        android:inputType="number"
        />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/dialog_edit_text_im_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        android:inputType="textUri"
        />
  </android.support.design.widget.TextInputLayout>

  <LinearLayout
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:orientation="horizontal"
      >

    <Button
        android:id="@+id/dialog_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/save"
        />

    <Button
        android:layout_marginStart="@dimen/margin_small"
        android:id="@+id/dialog_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:text="@string/cancel"
        />
  </LinearLayout>

</LinearLayout>
