<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="@dimen/large_padding"
    >

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <android.support.design.widget.TextInputEditText
      android:id="@+id/dialog_edit_text_type"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/type"
      android:inputType="text"
      />
</android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/dialog_edit_text_maker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/maker"
        android:inputType="text"
        />
  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/dialog_edit_text_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_model"
        android:inputType="text"
        />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/dialog_edit_text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_color"
        android:inputType="text"
        />
  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/dialog_edit_text_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_year"
        android:inputType="number"
        />
  </android.support.design.widget.TextInputLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center"
      >

    <Button
        android:id="@+id/dialog_btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        />

    <Button
        android:id="@+id/dialog_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        />

  </LinearLayout>

</LinearLayout>